# Gennie-Backend

./: .env.example  .gcloudignore  .gitignore  .migration_state.json  PROJECT_STRUCTURE.md  Procfile  README.md  alembic.ini  chat_backend_cleanup.py  check_project.sh  cleanup.sh  credentials.json  db_test_script.py  docker-compose.yml  docker-compose.yml.example  dockerfile  env.txt  fileStructure.txt  fix_metadata_issue.sh  gcp_setup.sh  project_clean.sh  pyproject.toml  requirements.txt  service.yaml  setup.py  setup.sh  setup_and_run.py  start.sh  startup_check.py  test_apis_and_services.py  test_config.py  test_day3_features.py  test_installation.py  test_personalization.py
backend/: .env.example  .gitignore  .migration_state.json  alembic.ini  docker-compose.yml  env.txt  fileStructure.txt  pyproject.toml  requirements.txt  setup_phase1_completion.py  test_gemini.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a435ed6c8db4_initial_schema.py
backend/app/: __init__.py  auto_migrate.py  config.py  database.py  logger.py  main.py  middleware.py
backend/app/models/: message_audio.py  user.py
backend/app/routers/: __init__.py  ai.py  auth.py  enhanced_websocket_voice.py  health.py  users.py  voice.py  websocket.py  websocket_tts.py
backend/app/services/: __init__.py  enhanced_rag_service.py  (+9 more)
backend/config/: production.py
backend/scripts/: check_services.sh  db_restore.sh  migrate.sh  migration_fix.py
backend/setup-scripts/: setup_database.sh  test_gcp.py
backend/tests/: conftest.py  test_auth.py  test_voice_integration.py
(+102 files in other folders)
